[gd_scene load_steps=8 format=3 uid="uid://dtfeioyvygr0o"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_egohg"]
[ext_resource type="StyleBox" uid="uid://04i0fc46yi0a" path="res://assets/button.tres" id="2_yojek"]
[ext_resource type="StyleBox" uid="uid://dfojhhfm26pbu" path="res://assets/button_press.tres" id="3_3go1y"]
[ext_resource type="StyleBox" uid="uid://5xmq7qx6lyt1" path="res://assets/button_fh.tres" id="4_1aqgf"]
[ext_resource type="StyleBox" uid="uid://c7e3ekqxdgnam" path="res://assets/button_disabled.tres" id="5_ghxfq"]
[ext_resource type="Theme" uid="uid://5fij32bunb7m" path="res://assets/tmemre/theme.tres" id="6_s1vlb"]

[sub_resource type="LabelSettings" id="LabelSettings_k7167"]
font_size = 10
font_color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="Settings" type="Window"]
mode = 2
title = "Settings"
initial_position = 2
size = Vector2i(233, 174)
wrap_controls = true
exclusive = true
script = ExtResource("1_egohg")

[node name="TabBar" type="TabBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_right = 63.0
offset_bottom = 31.0
grow_horizontal = 2
tab_count = 2
clip_tabs = false
scrolling_enabled = false
tab_0/title = "Player"
tab_1/title = "Misc"

[node name="V" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -59.0
offset_right = 43.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reset Save" type="Button" parent="V"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_yojek")
theme_override_styles/hover = ExtResource("4_1aqgf")
theme_override_styles/pressed = ExtResource("3_3go1y")
theme_override_styles/focus = ExtResource("4_1aqgf")
text = "Reset Save"

[node name="Changelog" type="Button" parent="V"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_yojek")
theme_override_styles/hover = ExtResource("4_1aqgf")
theme_override_styles/pressed = ExtResource("3_3go1y")
theme_override_styles/focus = ExtResource("4_1aqgf")
text = "Changelog"

[node name="Credits" type="Button" parent="V"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_yojek")
theme_override_styles/hover = ExtResource("4_1aqgf")
theme_override_styles/pressed = ExtResource("3_3go1y")
theme_override_styles/disabled = ExtResource("5_ghxfq")
theme_override_styles/focus = ExtResource("4_1aqgf")
disabled = true
text = "Credits"

[node name="V2" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -66.5
offset_right = 85.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="H" type="HBoxContainer" parent="V2"]
layout_mode = 2

[node name="Label" type="Label" parent="V2/H"]
layout_mode = 2
text = "Base Speed"

[node name="speed" type="SpinBox" parent="V2/H"]
layout_mode = 2
theme = ExtResource("6_s1vlb")
value = 7.0
suffix = "px"

[node name="Label" type="Label" parent="V2"]
layout_mode = 2
text = "Choose your Dad!"

[node name="OptionButton" type="OptionButton" parent="V2"]
visibility_layer = 2
layout_mode = 2
theme = ExtResource("6_s1vlb")
item_count = 8
selected = 1
popup/item_0/text = "Nothing Matters"
popup/item_0/id = 7
popup/item_0/disabled = true
popup/item_1/text = "Default Dad"
popup/item_1/id = 0
popup/item_2/text = "OG"
popup/item_2/id = 1
popup/item_3/text = "00010111"
popup/item_3/id = 2
popup/item_4/text = "bossy"
popup/item_4/id = 3
popup/item_5/text = "circle"
popup/item_5/id = 4
popup/item_6/text = "Too Fast"
popup/item_6/id = 5
popup/item_7/text = "A Warning to Others"
popup/item_7/id = 6

[node name="Label2" type="Label" parent="V2"]
layout_mode = 2
text = "*An actually inconvenient
way of skinning in my
backend perspective.*"
label_settings = SubResource("LabelSettings_k7167")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="tab_clicked" from="TabBar" to="." method="_on_tab_bar_tab_clicked"]
[connection signal="pressed" from="V/Reset Save" to="." method="_on_reset_save_pressed"]
[connection signal="pressed" from="V/Changelog" to="." method="_on_changelog_pressed"]
[connection signal="changed" from="V2/H/speed" to="." method="_on_speed_changed"]
[connection signal="value_changed" from="V2/H/speed" to="." method="_on_speed_value_changed"]
[connection signal="item_selected" from="V2/OptionButton" to="." method="_on_option_button_item_selected"]
